--- a/packaging/tizen-accelerator.conf
+++ b/packaging/tizen-accelerator.conf
@@ -1,4 +1,8 @@
-/emul/ia32-linux/usr/i586-suse-linux/lib
+/emul/ia32-linux/usr/x86_64-tizen-linux/lib64
+/emul/ia32-linux/usr/i586-tizen-linux/lib
+/emul/ia32-linux/usr/local/lib64
 /emul/ia32-linux/usr/local/lib
+/emul/ia32-linux/lib64
 /emul/ia32-linux/lib
+/emul/ia32-linux/usr/lib64
 /emul/ia32-linux/usr/lib
